--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="picture">
-            <img src="photo_2025-08-22_09-00-09.jpg" alt="">
+            <img src="/image/shaker.jpg" alt="">
         </div>
         <h1>Shaker Malikzada</h1>
         <p>full stack web  developer </p>
