--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
         <div class="social">
             <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+
 
         </div>
     </div>
