--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="picture">
-            <img src="image/shaker.jpg" alt="">
+            <img src="shaker.jpg" alt="shaker">
         </div>
         <h1>Shaker Malikzada</h1>
         <p>full stack web  developer </p>
